footer submit button fix bg color contrast

--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -53,7 +53,7 @@ footer {
             padding: .75rem 1.5rem;
             border-radius: 2rem;
             border: none;
-            background: $bright-red;
+            background: #DD370E;
             color: #fff;
             font-weight: 700;
             font-family: inherit;
