--- a/style/style.css
+++ b/style/style.css
@@ -577,7 +577,7 @@ footer form .submit {
   padding: 0.75rem 1.5rem;
   border-radius: 2rem;
   border: none;
-  background: hsl(12deg, 88%, 59%);
+  background: #DD370E;
   color: #fff;
   font-weight: 700;
   font-family: inherit;
